--- a/index.html
+++ b/index.html
@@ -34,9 +34,18 @@
         .cursor-dot { position: fixed; width: 6px; height: 6px; background: var(--neon-yellow); border-radius: 50%; pointer-events: none; transform: translate(-50%, -50%); z-index: 9999; box-shadow: 0 0 10px var(--neon-yellow); }
         .cursor-trail { position: fixed; width: 4px; height: 4px; background: rgba(255, 234, 0, 0.3); border-radius: 50%; pointer-events: none; transform: translate(-50%, -50%); z-index: 9998; transition: transform 0.12s ease-out; }
 
+        /* 헤더 스타일 복구 */
+        header { 
+            position: fixed; top: 0; left: 0; width: 100%; padding: 25px 5%; 
+            display: flex; justify-content: space-between; align-items: center; 
+            background: rgba(0,0,0,0.8); z-index: 1000; 
+        }
+        .logo { font-size: 1.2rem; letter-spacing: 1px; font-weight: 900; color: var(--neon-yellow); text-shadow: 0 0 10px rgba(255, 234, 0, 0.7); }
+        .status { font-size: 0.7rem; font-weight: bold; letter-spacing: 1px; }
+
         /* 공통 섹션 스타일 */
         section { padding: 100px 10%; border-bottom: 1px solid #111; }
-        .label { color: var(--accent-pink); font-size: 0.8rem; font-weight: bold; letter-spacing: 2px; text-transform: uppercase; }
+        .label { color: var(--accent-pink); font-size: 0.8rem; font-weight: bold; letter-spacing: 2px; }
         .section-title { font-size: 2.5rem; margin-top: 10px; margin-bottom: 5px; }
         .section-desc { font-size: 0.8rem; color: #888; margin-bottom: 35px; }
         .manager-text { max-width: 700px; font-size: 1.1rem; margin-bottom: 60px; white-space: pre-line; line-height: 2.2; }
@@ -53,21 +62,18 @@
         .eq-item.ai, .eq-item.bl { border-left: 4px solid #ff9a00; }
         .eq-item.id { border-left: 4px solid #ff3366; }
 
-        /* 장르별 영상: 필터 디자인 수정 */
+        /* 장르별 영상: 필터 디자인 수정 및 VIDEO GENRES 숨김 초기화 */
         .filter-container { margin-bottom: 40px; }
-        .filter-sub-label { display: block; font-size: 0.75rem; font-weight: 900; color: #666; margin-bottom: 10px; letter-spacing: 1px; }
+        .filter-sub-label { display: block; font-size: 0.75rem; font-weight: 900; color: #666; margin-bottom: 10px; letter-spacing: 1px; text-transform: uppercase; }
         .filter-group { display: flex; gap: 10px; flex-wrap: wrap; margin-bottom: 25px; }
+        #video-genres-section { display: none; margin-top: 20px; } /* 초기에는 숨김 */
         
         .filter-btn { 
             background: none; border: 1px solid #444; color: white; 
             padding: 8px 18px; font-size: 0.8rem; font-weight: 700; 
             transition: 0.3s; 
         }
-        .filter-btn.active { 
-            background: none; border-color: var(--neon-yellow); color: var(--neon-yellow);
-            box-shadow: inset 0 0 5px rgba(255, 234, 0, 0.2);
-        }
-        .filter-btn:hover:not(.active) { border-color: #888; }
+        .filter-btn.active { border-color: var(--neon-yellow); color: var(--neon-yellow); }
 
         /* 비디오 그리드 */
         .video-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 25px; }
@@ -78,7 +84,7 @@
         .video-tag { position: absolute; top: 10px; left: 10px; background: var(--neon-yellow); color: black; padding: 2px 8px; font-size: 0.7rem; font-weight: bold; z-index: 5; }
         .video-info { padding: 15px; font-size: 0.9rem; font-weight: bold; }
 
-        /* 캐릭터 카드 및 영수증 */
+        /* 오리지널 캐릭터 */
         .centered-section { text-align: center; }
         .char-grid { display: flex; gap: 30px; flex-wrap: wrap; justify-content: center; }
         .flip-card { width: 320px; height: 480px; perspective: 1000px; text-align: left; }
@@ -86,15 +92,18 @@
         .flip-card.is-flipped .flip-inner { transform: rotateY(180deg); }
         .flip-front, .flip-back { position: absolute; width: 100%; height: 100%; backface-visibility: hidden; border-radius: 15px; border: 1px solid #333; }
         .flip-front img { width: 100%; height: 100%; object-fit: cover; border-radius: 15px; }
-        .flip-back { background: #111; transform: rotateY(180deg); padding: 25px; display: flex; flex-direction: column; justify-content: center; }
+        .flip-back { background: #111; transform: rotateY(180deg); padding: 25px; display: flex; flex-direction: column; justify-content: center; overflow: hidden; }
+        .char-info-list { font-size: 0.85rem; line-height: 1.4; margin: 15px 0; color: #eee; }
         .char-info-list b { color: var(--neon-yellow); display: inline-block; width: 45px; }
-        .char-tags { font-size: 0.75rem; color: var(--accent-pink); margin-top: 10px; }
+        .char-tags { font-size: 0.8rem; color: var(--accent-pink); margin-top: 10px; font-weight: bold; }
 
+        /* 하단 영수증 */
         .receipt-container { display: flex; flex-direction: column; align-items: center; padding: 100px 10%; background: #050505; text-align: center; }
         .receipt { background: #fdfdf5; color: black; width: 380px; padding: 40px; font-family: 'Courier New', monospace; position: relative; box-shadow: 10px 10px 0px rgba(255, 234, 0, 0.2); text-align: left; }
         .receipt::after { content: "APPROVED"; position: absolute; border: 3px solid #e63946; color: #e63946; padding: 5px 15px; font-weight: bold; bottom: 40px; right: 25px; transform: rotate(-15deg); }
         .dash { border-bottom: 2px dashed #ccc; margin: 20px 0; }
 
+        /* BGM 플레이어 */
         #bgm-container { position: fixed; bottom: 30px; right: 30px; z-index: 1001; background: #111; border: 2px solid var(--neon-yellow); padding: 10px 15px; border-radius: 5px; display: flex; align-items: center; gap: 10px; box-shadow: 0 0 10px rgba(255, 234, 0, 0.3); }
         .playing .tape-icon { animation: spin 2s linear infinite; }
         @keyframes spin { 100% { transform: rotate(360deg); } }
@@ -121,8 +130,8 @@
     <audio id="click-sound" src="https://assets.mixkit.co/active_storage/sfx/2571/2571-preview.mp3"></audio>
 
     <header>
-        <div class="logo neon-text">GEUNRYEONG VIDEO CLUB</div>
-        <div style="font-size: 0.7rem;">● ALWAYS OPEN</div>
+        <div class="logo">GEUNRYEONG VIDEO CLUB</div>
+        <div class="status">● ALWAYS OPEN</div>
     </header>
 
     <section class="hero">
@@ -156,6 +165,18 @@
         </div>
     </section>
 
+    <section id="new">
+        <span class="label">NEW RELEASES</span>
+        <h2 class="neon-text section-title">신작 코너</h2>
+        <div class="section-desc">최근 입고된 테이프들입니다. 클릭하여 감상하세요.</div>
+        <div class="video-grid">
+            <div class="video-card"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/-mfwhKQv4MY"></iframe></div><div class="video-info">Product Video</div></div>
+            <div class="video-card"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/8XyyVhOo4j4"></iframe></div><div class="video-info">AI Animation Film</div></div>
+            <div class="video-card"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/hGRN-lwvUU4"></iframe></div><div class="video-info">3D Animation</div></div>
+            <div class="video-card"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/KbV-dxd6BoQ"></iframe></div><div class="video-info">WEBDRAMA</div></div>
+        </div>
+    </section>
+
     <section id="genres">
         <span class="label">GENRES</span>
         <h2 class="neon-text section-title">장르별 영상</h2>
@@ -165,32 +186,34 @@
             <span class="filter-sub-label">SHELVES</span>
             <div class="filter-group">
                 <button class="filter-btn active" data-filter="all">ALL</button>
-                <button class="filter-btn" data-filter="VIDEO">VIDEO</button>
+                <button class="filter-btn" id="video-tab-btn" data-filter="VIDEO">VIDEO</button>
             </div>
             
-            <span class="filter-sub-label">VIDEO GENRES</span>
-            <div class="filter-group">
-                <button class="filter-btn" data-filter="ANIMATION">ANIMATION</button>
-                <button class="filter-btn" data-filter="3D ANIMATION">3D ANIMATION</button>
-                <button class="filter-btn" data-filter="AD">AD</button>
-                <button class="filter-btn" data-filter="WEBDRAMA">WEBDRAMA</button>
-                <button class="filter-btn" data-filter="MEDIA ART">MEDIA ART</button>
-                <button class="filter-btn" data-filter="PODCAST">PODCAST</button>
+            <div id="video-genres-section">
+                <span class="filter-sub-label">VIDEO GENRES</span>
+                <div class="filter-group">
+                    <button class="filter-btn" data-filter="ANIMATION">ANIMATION</button>
+                    <button class="filter-btn" data-filter="3D ANIMATION">3D ANIMATION</button>
+                    <button class="filter-btn" data-filter="AD">AD</button>
+                    <button class="filter-btn" data-filter="WEBDRAMA">WEBDRAMA</button>
+                    <button class="filter-btn" data-filter="MEDIA ART">MEDIA ART</button>
+                    <button class="filter-btn" data-filter="PODCAST">PODCAST</button>
+                </div>
             </div>
         </div>
 
         <div class="video-grid" id="filtered-grid">
-            <div class="video-card" data-category="MEDIA ART VIDEO"><div class="video-tag">MEDIA ART</div><div class="iframe-container"><iframe src="https://www.youtube.com/embed/vCSrwtncK0Y"></iframe></div><div class="video-info">Media Art</div></div>
-            <div class="video-card" data-category="PODCAST VIDEO"><div class="video-tag">PODCAST</div><div class="iframe-container"><iframe src="https://www.youtube.com/embed/tR-zDeqXqO4"></iframe></div><div class="video-info">Podcast Ep.1</div></div>
-            <div class="video-card" data-category="PODCAST VIDEO"><div class="video-tag">PODCAST</div><div class="iframe-container"><iframe src="https://www.youtube.com/embed/DVWGfjU2-Jw"></iframe></div><div class="video-info">Podcast Ep.2</div></div>
-            <div class="video-card" data-category="PODCAST VIDEO"><div class="video-tag">PODCAST</div><div class="iframe-container"><iframe src="https://www.youtube.com/embed/6cFyGEuheX0"></iframe></div><div class="video-info">Podcast Ep.3</div></div>
-            <div class="video-card" data-category="PODCAST VIDEO"><div class="video-tag">PODCAST</div><div class="iframe-container"><iframe src="https://www.youtube.com/embed/4XuNehNNy0o"></iframe></div><div class="video-info">Podcast Ep.4</div></div>
-            <div class="video-card" data-category="PODCAST VIDEO"><div class="video-tag">PODCAST</div><div class="iframe-container"><iframe src="https://www.youtube.com/embed/prne2fJYE7I"></iframe></div><div class="video-info">Podcast Ep.5</div></div>
-            <div class="video-card" data-category="PODCAST VIDEO"><div class="video-tag">PODCAST</div><div class="iframe-container"><iframe src="https://www.youtube.com/embed/faz2WUjPSdo"></iframe></div><div class="video-info">Podcast Ep.6</div></div>
-            <div class="video-card" data-category="ANIMATION VIDEO"><div class="video-tag">ANIMATION</div><div class="iframe-container"><iframe src="https://www.youtube.com/embed/8XyyVhOo4j4"></iframe></div><div class="video-info">AI Animation Film</div></div>
-            <div class="video-card" data-category="3D ANIMATION VIDEO"><div class="video-tag">3D ANIMATION</div><div class="iframe-container"><iframe src="https://www.youtube.com/embed/hGRN-lwvUU4"></iframe></div><div class="video-info">3D Animation</div></div>
-            <div class="video-card" data-category="WEBDRAMA VIDEO"><div class="video-tag">WEBDRAMA</div><div class="iframe-container"><iframe src="https://www.youtube.com/embed/KbV-dxd6BoQ"></iframe></div><div class="video-info">Web Drama</div></div>
-            <div class="video-card" data-category="AD VIDEO"><div class="video-tag">AD</div><div class="iframe-container"><iframe src="https://www.youtube.com/embed/-mfwhKQv4MY"></iframe></div><div class="video-info">Product Video</div></div>
+            <div class="video-card" data-category="MEDIA ART VIDEO"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/vCSrwtncK0Y"></iframe></div><div class="video-info">Media Art</div></div>
+            <div class="video-card" data-category="PODCAST VIDEO"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/tR-zDeqXqO4"></iframe></div><div class="video-info">Podcast Ep.1</div></div>
+            <div class="video-card" data-category="PODCAST VIDEO"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/DVWGfjU2-Jw"></iframe></div><div class="video-info">Podcast Ep.2</div></div>
+            <div class="video-card" data-category="PODCAST VIDEO"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/6cFyGEuheX0"></iframe></div><div class="video-info">Podcast Ep.3</div></div>
+            <div class="video-card" data-category="PODCAST VIDEO"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/4XuNehNNy0o"></iframe></div><div class="video-info">Podcast Ep.4</div></div>
+            <div class="video-card" data-category="PODCAST VIDEO"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/prne2fJYE7I"></iframe></div><div class="video-info">Podcast Ep.5</div></div>
+            <div class="video-card" data-category="PODCAST VIDEO"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/faz2WUjPSdo"></iframe></div><div class="video-info">Podcast Ep.6</div></div>
+            <div class="video-card" data-category="ANIMATION VIDEO"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/8XyyVhOo4j4"></iframe></div><div class="video-info">AI Animation Film</div></div>
+            <div class="video-card" data-category="3D ANIMATION VIDEO"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/hGRN-lwvUU4"></iframe></div><div class="video-info">3D Animation</div></div>
+            <div class="video-card" data-category="WEBDRAMA VIDEO"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/KbV-dxd6BoQ"></iframe></div><div class="video-info">Web Drama</div></div>
+            <div class="video-card" data-category="AD VIDEO"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/-mfwhKQv4MY"></iframe></div><div class="video-info">Product Video</div></div>
         </div>
     </section>
 
@@ -205,8 +228,8 @@
                     <div class="flip-back">
                         <h2 class="neon-text" style="font-size: 2rem;">IAN</h2>
                         <p style="font-size: 0.85rem;">낮에는 평범한 고등학생, 밤에는 인디 밴드 보컬.</p>
-                        <div class="char-info-list"><p><b>나이</b> 18세</p><p><b>역할</b> 학생 / 보컬</p><p><b>테마</b> 이중 생활</p></div>
-                        <div class="char-tags">#이중생활 #갭모에 #안경스위치</div>
+                        <div class="char-info-list"><p><b>나이</b> 18세</p><p><b>역할</b> 학생 / 인디 밴드 보컬</p><p><b>테마</b> 이중 생활</p></div>
+                        <div class="char-tags">#이중생활 #갭모에<br>#카리스마보컬 #안경스위치</div>
                     </div>
                 </div>
             </div>
@@ -215,9 +238,9 @@
                     <div class="flip-front"><img src="8.jpg" alt="ECHO"></div>
                     <div class="flip-back">
                         <h2 class="neon-text" style="font-size: 2rem;">ECHO</h2>
-                        <p style="font-size: 0.85rem;">네오 시티의 언더그라운드 작곡가.</p>
+                        <p style="font-size: 0.85rem;">네오 시티의 그림자 속에서 활동하는 언더그라운드 작곡가.</p>
                         <div class="char-info-list"><p><b>나이</b> 20대 초반</p><p><b>역할</b> 작곡가 / 해커</p><p><b>테마</b> 자유와 집중</p></div>
-                        <div class="char-tags">#무심 #츤데레 #자유추구</div>
+                        <div class="char-tags">#무심 #츤데레<br>#자유추구 #집중력</div>
                     </div>
                 </div>
             </div>
@@ -239,18 +262,21 @@
     </div>
 
     <script>
+        // 커서 로직
         const dot = document.getElementById('cursor-dot');
         const trail = document.getElementById('cursor-trail');
         document.addEventListener('mousemove', e => {
             dot.style.left = e.clientX + 'px';
             dot.style.top = e.clientY + 'px';
-            setTimeout(() => { trail.style.left = e.clientX + 'px'; trail.style.top = e.clientY + 'px'; }, 120);
+            setTimeout(() => { trail.style.left = e.clientX + 'px'; trail.style.top = e.clientY + 'px'; }, 100);
         });
 
+        // 찰칵 효과음
         const clickSound = document.getElementById('click-sound');
         function playClick() { clickSound.currentTime = 0; clickSound.play(); }
         function flipChar(el) { playClick(); el.classList.toggle('is-flipped'); }
 
+        // BGM 로직
         const playlist = ["bgm1.mp3", "bgm2.mp3", "bgm3.mp3", "bgm4.mp3"];
         let currentTrack = 0;
         const mainAudio = document.getElementById('main-audio');
@@ -273,14 +299,29 @@
         function playPrev() { playClick(); currentTrack = (currentTrack - 1 + playlist.length) % playlist.length; loadTrack(currentTrack); mainAudio.play(); }
         mainAudio.onended = playNext;
 
+        // 필터 및 VIDEO GENRES 조건부 노출 로직
         const buttons = document.querySelectorAll('.filter-btn');
         const cards = document.querySelectorAll('#filtered-grid .video-card');
+        const videoGenresSection = document.getElementById('video-genres-section');
+
         buttons.forEach(button => {
             button.addEventListener('click', () => {
                 playClick();
                 buttons.forEach(btn => btn.classList.remove('active'));
                 button.classList.add('active');
+
                 const filter = button.getAttribute('data-filter');
+
+                // 1. VIDEO 클릭 시 하위 장르 노출 제어
+                if (filter === 'VIDEO') {
+                    videoGenresSection.style.display = 'block';
+                } else if (button.closest('#video-genres-section')) {
+                    // 하위 장르 클릭 시는 유지
+                } else {
+                    videoGenresSection.style.display = 'none';
+                }
+
+                // 2. 비디오 카드 필터링
                 cards.forEach(card => {
                     const cat = card.getAttribute('data-category');
                     if (filter === 'all' || cat.includes(filter)) card.classList.remove('hide');
