--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         .cursor-dot { position: fixed; width: 6px; height: 6px; background: var(--neon-yellow); border-radius: 50%; pointer-events: none; transform: translate(-50%, -50%); z-index: 9999; box-shadow: 0 0 10px var(--neon-yellow); }
         .cursor-trail { position: fixed; width: 4px; height: 4px; background: rgba(255, 234, 0, 0.3); border-radius: 50%; pointer-events: none; transform: translate(-50%, -50%); z-index: 9998; transition: transform 0.12s ease-out; }
 
-        /* 헤더 스타일 복구 */
+        /* 헤더 스타일 */
         header { 
             position: fixed; top: 0; left: 0; width: 100%; padding: 25px 5%; 
             display: flex; justify-content: space-between; align-items: center; 
@@ -43,14 +43,19 @@
         .logo { font-size: 1.2rem; letter-spacing: 1px; font-weight: 900; color: var(--neon-yellow); text-shadow: 0 0 10px rgba(255, 234, 0, 0.7); }
         .status { font-size: 0.7rem; font-weight: bold; letter-spacing: 1px; }
 
-        /* 공통 섹션 스타일 */
+        /* 공통 섹션 스타일 - 제목 색상 복구 */
         section { padding: 100px 10%; border-bottom: 1px solid #111; }
         .label { color: var(--accent-pink); font-size: 0.8rem; font-weight: bold; letter-spacing: 2px; }
-        .section-title { font-size: 2.5rem; margin-top: 10px; margin-bottom: 5px; }
+        .section-title { 
+            font-size: 2.5rem; margin-top: 10px; margin-bottom: 5px; 
+            color: var(--neon-yellow) !important; /* 강제로 네온 옐로우 적용 */
+            text-shadow: 0 0 10px rgba(255, 234, 0, 0.7);
+            font-weight: 900;
+        }
         .section-desc { font-size: 0.8rem; color: #888; margin-bottom: 35px; }
         .manager-text { max-width: 700px; font-size: 1.1rem; margin-bottom: 60px; white-space: pre-line; line-height: 2.2; }
 
-        /* 장비 목록: 무채색 -> 호버 시 색상 활성화 */
+        /* 장비 목록 */
         .equipment-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 15px; margin-top: 20px; }
         .eq-item { 
             background: #0d0d0d; padding: 25px; border: 1px solid #222; 
@@ -62,11 +67,11 @@
         .eq-item.ai, .eq-item.bl { border-left: 4px solid #ff9a00; }
         .eq-item.id { border-left: 4px solid #ff3366; }
 
-        /* 장르별 영상: 필터 디자인 수정 및 VIDEO GENRES 숨김 초기화 */
+        /* 장르별 영상 필터 */
         .filter-container { margin-bottom: 40px; }
         .filter-sub-label { display: block; font-size: 0.75rem; font-weight: 900; color: #666; margin-bottom: 10px; letter-spacing: 1px; text-transform: uppercase; }
         .filter-group { display: flex; gap: 10px; flex-wrap: wrap; margin-bottom: 25px; }
-        #video-genres-section { display: none; margin-top: 20px; } /* 초기에는 숨김 */
+        #video-genres-section { display: none; margin-top: 20px; }
         
         .filter-btn { 
             background: none; border: 1px solid #444; color: white; 
@@ -97,13 +102,7 @@
         .char-info-list b { color: var(--neon-yellow); display: inline-block; width: 45px; }
         .char-tags { font-size: 0.8rem; color: var(--accent-pink); margin-top: 10px; font-weight: bold; }
 
-        /* 하단 영수증 */
-        .receipt-container { display: flex; flex-direction: column; align-items: center; padding: 100px 10%; background: #050505; text-align: center; }
-        .receipt { background: #fdfdf5; color: black; width: 380px; padding: 40px; font-family: 'Courier New', monospace; position: relative; box-shadow: 10px 10px 0px rgba(255, 234, 0, 0.2); text-align: left; }
-        .receipt::after { content: "APPROVED"; position: absolute; border: 3px solid #e63946; color: #e63946; padding: 5px 15px; font-weight: bold; bottom: 40px; right: 25px; transform: rotate(-15deg); }
-        .dash { border-bottom: 2px dashed #ccc; margin: 20px 0; }
-
-        /* BGM 플레이어 */
+        /* 하단 BGM 플레이어 */
         #bgm-container { position: fixed; bottom: 30px; right: 30px; z-index: 1001; background: #111; border: 2px solid var(--neon-yellow); padding: 10px 15px; border-radius: 5px; display: flex; align-items: center; gap: 10px; box-shadow: 0 0 10px rgba(255, 234, 0, 0.3); }
         .playing .tape-icon { animation: spin 2s linear infinite; }
         @keyframes spin { 100% { transform: rotate(360deg); } }
@@ -136,14 +135,14 @@
 
     <section class="hero">
         <div class="hero-content">
-            <h1 class="neon-text">지금 가장 보고 싶은<br>영상을 대여해 드립니다.</h1>
+            <h1>지금 가장 보고 싶은<br>영상을 대여해 드립니다.</h1>
             <p style="opacity: 0.7;">Curated videos & characters by GeunRyeong</p>
         </div>
     </section>
 
     <section id="about">
         <span class="label">MANAGER</span>
-        <h2 class="neon-text section-title">점주 소개</h2>
+        <h2 class="section-title">점주 소개</h2>
         <div class="section-desc">점주에 대한 간단한 소개입니다.</div>
         <div class="manager-text">
             VIDEO CLUB의 점주 김근령입니다.
@@ -153,7 +152,7 @@
         </div>
 
         <span class="label">EQUIPMENT RENTAL</span>
-        <h2 class="neon-text section-title">장비 목록</h2>
+        <h2 class="section-title">장비 목록</h2>
         <div class="section-desc">비디오를 만들기 위해 항상 대여 가능한 장비 목록</div>
         <div class="equipment-grid">
             <div class="eq-item pr">Premiere Pro</div>
@@ -167,19 +166,19 @@
 
     <section id="new">
         <span class="label">NEW RELEASES</span>
-        <h2 class="neon-text section-title">신작 코너</h2>
+        <h2 class="section-title">신작 코너</h2>
         <div class="section-desc">최근 입고된 테이프들입니다. 클릭하여 감상하세요.</div>
         <div class="video-grid">
-            <div class="video-card"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/-mfwhKQv4MY"></iframe></div><div class="video-info">Product Video</div></div>
-            <div class="video-card"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/8XyyVhOo4j4"></iframe></div><div class="video-info">AI Animation Film</div></div>
-            <div class="video-card"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/hGRN-lwvUU4"></iframe></div><div class="video-info">3D Animation</div></div>
-            <div class="video-card"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/KbV-dxd6BoQ"></iframe></div><div class="video-info">WEBDRAMA</div></div>
+            <div class="video-card"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/-mfwhKQv4MY" allowfullscreen></iframe></div><div class="video-info">Product Video</div></div>
+            <div class="video-card"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/8XyyVhOo4j4" allowfullscreen></iframe></div><div class="video-info">AI Animation Film</div></div>
+            <div class="video-card"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/hGRN-lwvUU4" allowfullscreen></iframe></div><div class="video-info">3D Animation</div></div>
+            <div class="video-card"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/KbV-dxd6BoQ" allowfullscreen></iframe></div><div class="video-info">WEBDRAMA</div></div>
         </div>
     </section>
 
     <section id="genres">
         <span class="label">GENRES</span>
-        <h2 class="neon-text section-title">장르별 영상</h2>
+        <h2 class="section-title">장르별 영상</h2>
         <div class="section-desc">원하시는 장르의 테이프를 골라보세요.</div>
         
         <div class="filter-container">
@@ -219,17 +218,17 @@
 
     <section id="characters" class="centered-section">
         <span class="label">ORIGINAL CHARACTERS</span>
-        <h2 class="neon-text section-title">오리지널 캐릭터</h2>
+        <h2 class="section-title">오리지널 캐릭터</h2>
         <div class="section-desc">카드를 클릭하면 캐릭터 프로필을 볼 수 있습니다.</div>
         <div class="char-grid">
             <div class="flip-card" onclick="flipChar(this)">
                 <div class="flip-inner">
                     <div class="flip-front"><img src="7.jpg" alt="IAN"></div>
                     <div class="flip-back">
-                        <h2 class="neon-text" style="font-size: 2rem;">IAN</h2>
-                        <p style="font-size: 0.85rem;">낮에는 평범한 고등학생, 밤에는 인디 밴드 보컬.</p>
-                        <div class="char-info-list"><p><b>나이</b> 18세</p><p><b>역할</b> 학생 / 인디 밴드 보컬</p><p><b>테마</b> 이중 생활</p></div>
-                        <div class="char-tags">#이중생활 #갭모에<br>#카리스마보컬 #안경스위치</div>
+                        <h2 class="section-title" style="font-size: 2rem;">IAN</h2>
+                        <p style="font-size: 0.85rem;">낮에는 평범한 고등학생,<br>밤에는 인디 밴드 보컬.</p>
+                        <div class="char-info-list"><p><b>나이</b> 18세</p><p><b>역할</b> 학생 / 보컬</p><p><b>테마</b> 이중 생활</p></div>
+                        <div class="char-tags">#이중생활 #갭모에 #안경스위치</div>
                     </div>
                 </div>
             </div>
@@ -237,10 +236,10 @@
                 <div class="flip-inner">
                     <div class="flip-front"><img src="8.jpg" alt="ECHO"></div>
                     <div class="flip-back">
-                        <h2 class="neon-text" style="font-size: 2rem;">ECHO</h2>
-                        <p style="font-size: 0.85rem;">네오 시티의 그림자 속에서 활동하는 언더그라운드 작곡가.</p>
+                        <h2 class="section-title" style="font-size: 2rem;">ECHO</h2>
+                        <p style="font-size: 0.85rem;">네오 시티의 언더그라운드 작곡가.</p>
                         <div class="char-info-list"><p><b>나이</b> 20대 초반</p><p><b>역할</b> 작곡가 / 해커</p><p><b>테마</b> 자유와 집중</p></div>
-                        <div class="char-tags">#무심 #츤데레<br>#자유추구 #집중력</div>
+                        <div class="char-tags">#무심 #츤데레 #자유추구</div>
                     </div>
                 </div>
             </div>
@@ -248,21 +247,7 @@
         <div style="font-size: 0.7rem; color: #555; margin-top: 40px;">* 모든 캐릭터는 오리지널 창작물입니다 *</div>
     </section>
 
-    <div class="receipt-container">
-        <div style="margin-bottom: 20px;"><span class="label">RENTAL INFO</span><h2 class="neon-text section-title">대여 안내</h2></div>
-        <div class="receipt">
-            <p style="text-align: center; font-weight: bold;">VIDEO CLUB INFO</p>
-            <div class="dash"></div>
-            <p>EMAIL: rrf0524@naver.com</p>
-            <p>INSTAGRAM: @kim__dobby_is_free</p>
-            <p>KAKAOTALK: kgr__0524</p>
-            <div class="dash"></div>
-            <p style="text-align: center; font-size: 0.8rem; margin-top: 20px;">THANK YOU</p>
-        </div>
-    </div>
-
     <script>
-        // 커서 로직
         const dot = document.getElementById('cursor-dot');
         const trail = document.getElementById('cursor-trail');
         document.addEventListener('mousemove', e => {
@@ -271,12 +256,10 @@
             setTimeout(() => { trail.style.left = e.clientX + 'px'; trail.style.top = e.clientY + 'px'; }, 100);
         });
 
-        // 찰칵 효과음
         const clickSound = document.getElementById('click-sound');
         function playClick() { clickSound.currentTime = 0; clickSound.play(); }
         function flipChar(el) { playClick(); el.classList.toggle('is-flipped'); }
 
-        // BGM 로직
         const playlist = ["bgm1.mp3", "bgm2.mp3", "bgm3.mp3", "bgm4.mp3"];
         let currentTrack = 0;
         const mainAudio = document.getElementById('main-audio');
@@ -299,7 +282,6 @@
         function playPrev() { playClick(); currentTrack = (currentTrack - 1 + playlist.length) % playlist.length; loadTrack(currentTrack); mainAudio.play(); }
         mainAudio.onended = playNext;
 
-        // 필터 및 VIDEO GENRES 조건부 노출 로직
         const buttons = document.querySelectorAll('.filter-btn');
         const cards = document.querySelectorAll('#filtered-grid .video-card');
         const videoGenresSection = document.getElementById('video-genres-section');
@@ -309,19 +291,14 @@
                 playClick();
                 buttons.forEach(btn => btn.classList.remove('active'));
                 button.classList.add('active');
-
                 const filter = button.getAttribute('data-filter');
 
-                // 1. VIDEO 클릭 시 하위 장르 노출 제어
                 if (filter === 'VIDEO') {
                     videoGenresSection.style.display = 'block';
-                } else if (button.closest('#video-genres-section')) {
-                    // 하위 장르 클릭 시는 유지
-                } else {
+                } else if (!button.closest('#video-genres-section')) {
                     videoGenresSection.style.display = 'none';
                 }
 
-                // 2. 비디오 카드 필터링
                 cards.forEach(card => {
                     const cat = card.getAttribute('data-category');
                     if (filter === 'all' || cat.includes(filter)) card.classList.remove('hide');
