--- a/index.html
+++ b/index.html
@@ -35,32 +35,20 @@
         .cursor-trail { position: fixed; width: 4px; height: 4px; background: rgba(255, 234, 0, 0.3); border-radius: 50%; pointer-events: none; transform: translate(-50%, -50%); z-index: 9998; transition: transform 0.12s ease-out; }
 
         /* 헤더 스타일 */
-        header { 
-            position: fixed; top: 0; left: 0; width: 100%; padding: 25px 5%; 
-            display: flex; justify-content: space-between; align-items: center; 
-            background: rgba(0,0,0,0.8); z-index: 1000; 
-        }
+        header { position: fixed; top: 0; left: 0; width: 100%; padding: 25px 5%; display: flex; justify-content: space-between; align-items: center; background: rgba(0,0,0,0.8); z-index: 1000; }
         .logo { font-size: 1.2rem; letter-spacing: 1px; font-weight: 900; color: var(--neon-yellow); text-shadow: 0 0 10px rgba(255, 234, 0, 0.7); }
         .status { font-size: 0.7rem; font-weight: bold; letter-spacing: 1px; }
 
-        /* 공통 섹션 스타일 - 제목 색상 복구 */
+        /* 공통 섹션 스타일 */
         section { padding: 100px 10%; border-bottom: 1px solid #111; }
         .label { color: var(--accent-pink); font-size: 0.8rem; font-weight: bold; letter-spacing: 2px; }
-        .section-title { 
-            font-size: 2.5rem; margin-top: 10px; margin-bottom: 5px; 
-            color: var(--neon-yellow) !important; /* 강제로 네온 옐로우 적용 */
-            text-shadow: 0 0 10px rgba(255, 234, 0, 0.7);
-            font-weight: 900;
-        }
+        .section-title { font-size: 2.5rem; margin-top: 10px; margin-bottom: 5px; color: var(--neon-yellow) !important; text-shadow: 0 0 10px rgba(255, 234, 0, 0.7); font-weight: 900; }
         .section-desc { font-size: 0.8rem; color: #888; margin-bottom: 35px; }
         .manager-text { max-width: 700px; font-size: 1.1rem; margin-bottom: 60px; white-space: pre-line; line-height: 2.2; }
 
         /* 장비 목록 */
         .equipment-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 15px; margin-top: 20px; }
-        .eq-item { 
-            background: #0d0d0d; padding: 25px; border: 1px solid #222; 
-            transition: all 0.4s ease; filter: grayscale(100%); opacity: 0.5;
-        }
+        .eq-item { background: #0d0d0d; padding: 25px; border: 1px solid #222; transition: all 0.4s ease; filter: grayscale(100%); opacity: 0.5; }
         .eq-item:hover { filter: grayscale(0%); opacity: 1; transform: translateY(-5px); border-color: rgba(255, 255, 255, 0.2); }
         .eq-item.pr, .eq-item.ae { border-left: 4px solid #312963; }
         .eq-item.ps { border-left: 4px solid #31a8ff; }
@@ -72,12 +60,7 @@
         .filter-sub-label { display: block; font-size: 0.75rem; font-weight: 900; color: #666; margin-bottom: 10px; letter-spacing: 1px; text-transform: uppercase; }
         .filter-group { display: flex; gap: 10px; flex-wrap: wrap; margin-bottom: 25px; }
         #video-genres-section { display: none; margin-top: 20px; }
-        
-        .filter-btn { 
-            background: none; border: 1px solid #444; color: white; 
-            padding: 8px 18px; font-size: 0.8rem; font-weight: 700; 
-            transition: 0.3s; 
-        }
+        .filter-btn { background: none; border: 1px solid #444; color: white; padding: 8px 18px; font-size: 0.8rem; font-weight: 700; transition: 0.3s; }
         .filter-btn.active { border-color: var(--neon-yellow); color: var(--neon-yellow); }
 
         /* 비디오 그리드 */
@@ -89,7 +72,7 @@
         .video-tag { position: absolute; top: 10px; left: 10px; background: var(--neon-yellow); color: black; padding: 2px 8px; font-size: 0.7rem; font-weight: bold; z-index: 5; }
         .video-info { padding: 15px; font-size: 0.9rem; font-weight: bold; }
 
-        /* 오리지널 캐릭터 */
+        /* 캐릭터 섹션 */
         .centered-section { text-align: center; }
         .char-grid { display: flex; gap: 30px; flex-wrap: wrap; justify-content: center; }
         .flip-card { width: 320px; height: 480px; perspective: 1000px; text-align: left; }
@@ -97,12 +80,18 @@
         .flip-card.is-flipped .flip-inner { transform: rotateY(180deg); }
         .flip-front, .flip-back { position: absolute; width: 100%; height: 100%; backface-visibility: hidden; border-radius: 15px; border: 1px solid #333; }
         .flip-front img { width: 100%; height: 100%; object-fit: cover; border-radius: 15px; }
-        .flip-back { background: #111; transform: rotateY(180deg); padding: 25px; display: flex; flex-direction: column; justify-content: center; overflow: hidden; }
+        .flip-back { background: #111; transform: rotateY(180deg); padding: 25px; display: flex; flex-direction: column; justify-content: center; }
         .char-info-list { font-size: 0.85rem; line-height: 1.4; margin: 15px 0; color: #eee; }
         .char-info-list b { color: var(--neon-yellow); display: inline-block; width: 45px; }
         .char-tags { font-size: 0.8rem; color: var(--accent-pink); margin-top: 10px; font-weight: bold; }
 
-        /* 하단 BGM 플레이어 */
+        /* 대여 안내 섹션 복구 */
+        .receipt-container { display: flex; flex-direction: column; align-items: center; padding: 100px 10%; background: #050505; text-align: center; }
+        .receipt { background: #fdfdf5; color: black; width: 380px; padding: 40px; font-family: 'Courier New', monospace; position: relative; box-shadow: 10px 10px 0px rgba(255, 234, 0, 0.2); text-align: left; }
+        .receipt::after { content: "APPROVED"; position: absolute; border: 3px solid #e63946; color: #e63946; padding: 5px 15px; font-weight: bold; bottom: 40px; right: 25px; transform: rotate(-15deg); }
+        .dash { border-bottom: 2px dashed #ccc; margin: 20px 0; }
+
+        /* BGM & 애니메이션 */
         #bgm-container { position: fixed; bottom: 30px; right: 30px; z-index: 1001; background: #111; border: 2px solid var(--neon-yellow); padding: 10px 15px; border-radius: 5px; display: flex; align-items: center; gap: 10px; box-shadow: 0 0 10px rgba(255, 234, 0, 0.3); }
         .playing .tape-icon { animation: spin 2s linear infinite; }
         @keyframes spin { 100% { transform: rotate(360deg); } }
@@ -192,8 +181,7 @@
                 <span class="filter-sub-label">VIDEO GENRES</span>
                 <div class="filter-group">
                     <button class="filter-btn" data-filter="ANIMATION">ANIMATION</button>
-                    <button class="filter-btn" data-filter="3D ANIMATION">3D ANIMATION</button>
-                    <button class="filter-btn" data-filter="AD">AD</button>
+                    <button class="filter-btn" data-filter="SHORTS">SHORTS</button> <button class="filter-btn" data-filter="AD">AD</button>
                     <button class="filter-btn" data-filter="WEBDRAMA">WEBDRAMA</button>
                     <button class="filter-btn" data-filter="MEDIA ART">MEDIA ART</button>
                     <button class="filter-btn" data-filter="PODCAST">PODCAST</button>
@@ -210,7 +198,7 @@
             <div class="video-card" data-category="PODCAST VIDEO"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/prne2fJYE7I"></iframe></div><div class="video-info">Podcast Ep.5</div></div>
             <div class="video-card" data-category="PODCAST VIDEO"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/faz2WUjPSdo"></iframe></div><div class="video-info">Podcast Ep.6</div></div>
             <div class="video-card" data-category="ANIMATION VIDEO"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/8XyyVhOo4j4"></iframe></div><div class="video-info">AI Animation Film</div></div>
-            <div class="video-card" data-category="3D ANIMATION VIDEO"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/hGRN-lwvUU4"></iframe></div><div class="video-info">3D Animation</div></div>
+            <div class="video-card" data-category="SHORTS VIDEO"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/hGRN-lwvUU4"></iframe></div><div class="video-info">3D Animation</div></div>
             <div class="video-card" data-category="WEBDRAMA VIDEO"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/KbV-dxd6BoQ"></iframe></div><div class="video-info">Web Drama</div></div>
             <div class="video-card" data-category="AD VIDEO"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/-mfwhKQv4MY"></iframe></div><div class="video-info">Product Video</div></div>
         </div>
@@ -227,7 +215,9 @@
                     <div class="flip-back">
                         <h2 class="section-title" style="font-size: 2rem;">IAN</h2>
                         <p style="font-size: 0.85rem;">낮에는 평범한 고등학생,<br>밤에는 인디 밴드 보컬.</p>
-                        <div class="char-info-list"><p><b>나이</b> 18세</p><p><b>역할</b> 학생 / 보컬</p><p><b>테마</b> 이중 생활</p></div>
+                        <div class="char-info-list">
+                            <p><b>나이</b> 18세</p><p><b>역할</b> 학생 / 보컬</p><p><b>테마</b> 이중 생활</p>
+                        </div>
                         <div class="char-tags">#이중생활 #갭모에 #안경스위치</div>
                     </div>
                 </div>
@@ -238,7 +228,9 @@
                     <div class="flip-back">
                         <h2 class="section-title" style="font-size: 2rem;">ECHO</h2>
                         <p style="font-size: 0.85rem;">네오 시티의 언더그라운드 작곡가.</p>
-                        <div class="char-info-list"><p><b>나이</b> 20대 초반</p><p><b>역할</b> 작곡가 / 해커</p><p><b>테마</b> 자유와 집중</p></div>
+                        <div class="char-info-list">
+                            <p><b>나이</b> 20대 초반</p><p><b>역할</b> 작곡가 / 해커</p><p><b>테마</b> 자유와 집중</p>
+                        </div>
                         <div class="char-tags">#무심 #츤데레 #자유추구</div>
                     </div>
                 </div>
@@ -247,12 +239,28 @@
         <div style="font-size: 0.7rem; color: #555; margin-top: 40px;">* 모든 캐릭터는 오리지널 창작물입니다 *</div>
     </section>
 
+    <div class="receipt-container">
+        <div style="margin-bottom: 20px;">
+            <span class="label">RENTAL INFO</span>
+            <h2 class="section-title">대여 안내</h2>
+            <div class="section-desc">방문해 주셔서 감사합니다. 연락은 아래 정보를 이용해 주세요.</div>
+        </div>
+        <div class="receipt">
+            <p style="text-align: center; font-weight: bold;">VIDEO CLUB INFO</p>
+            <div class="dash"></div>
+            <p>EMAIL: rrf0524@naver.com</p>
+            <p>INSTAGRAM: @kim__dobby_is_free</p>
+            <p>KAKAOTALK: kgr__0524</p>
+            <div class="dash"></div>
+            <p style="text-align: center; font-size: 0.8rem; margin-top: 20px;">THANK YOU FOR VISITING</p>
+        </div>
+    </div>
+
     <script>
         const dot = document.getElementById('cursor-dot');
         const trail = document.getElementById('cursor-trail');
         document.addEventListener('mousemove', e => {
-            dot.style.left = e.clientX + 'px';
-            dot.style.top = e.clientY + 'px';
+            dot.style.left = e.clientX + 'px'; dot.style.top = e.clientY + 'px';
             setTimeout(() => { trail.style.left = e.clientX + 'px'; trail.style.top = e.clientY + 'px'; }, 100);
         });
 
@@ -293,11 +301,8 @@
                 button.classList.add('active');
                 const filter = button.getAttribute('data-filter');
 
-                if (filter === 'VIDEO') {
-                    videoGenresSection.style.display = 'block';
-                } else if (!button.closest('#video-genres-section')) {
-                    videoGenresSection.style.display = 'none';
-                }
+                if (filter === 'VIDEO') { videoGenresSection.style.display = 'block'; }
+                else if (!button.closest('#video-genres-section')) { videoGenresSection.style.display = 'none'; }
 
                 cards.forEach(card => {
                     const cat = card.getAttribute('data-category');
