--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <h2 class="section-title">신작 코너</h2>
         <div class="section-desc">최근 입고된 테이프들입니다. 클릭하여 감상하세요.</div>
         <div class="video-grid">
-            <div class="video-card"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/-mfwhKQv4MY" allowfullscreen></iframe></div><div class="video-info">Product Video</div></div>
+            <div class="video-card"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/m0rIQlBUato" allowfullscreen></iframe></div><div class="video-info">Product Video</div></div>
             <div class="video-card"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/8XyyVhOo4j4" allowfullscreen></iframe></div><div class="video-info">AI Animation Film</div></div>
             <div class="video-card"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/hGRN-lwvUU4" allowfullscreen></iframe></div><div class="video-info">3D Animation</div></div>
             <div class="video-card"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/KbV-dxd6BoQ" allowfullscreen></iframe></div><div class="video-info">WEBDRAMA</div></div>
@@ -200,7 +200,7 @@
             <div class="video-card" data-category="ANIMATION VIDEO"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/8XyyVhOo4j4"></iframe></div><div class="video-info">AI Animation Film</div></div>
             <div class="video-card" data-category="SHORTS VIDEO"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/hGRN-lwvUU4"></iframe></div><div class="video-info">3D Animation</div></div>
             <div class="video-card" data-category="WEBDRAMA VIDEO"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/KbV-dxd6BoQ"></iframe></div><div class="video-info">Web Drama</div></div>
-            <div class="video-card" data-category="AD VIDEO"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/-mfwhKQv4MY"></iframe></div><div class="video-info">Product Video</div></div>
+            <div class="video-card" data-category="AD VIDEO"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/m0rIQlBUato"></iframe></div><div class="video-info">Product Video</div></div>
         </div>
     </section>
 
